force-app/main/default/objects/CaseSolutionJunction__c/CaseSolutionJunction__c.object-meta.xml
<CustomObject>
    <label>Case Solution Junction</label>
    <nameField>
        <displayFormat>CSJ-{00000000}</displayFormat>
        <label>Case Solution Junction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Solution Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>