force-app/main/default/objects/CaseSolutionJunction__c/fields/Account_Key__c.field-meta.xml
<CustomField>
    <fullName>Account_Key__c</fullName>
    <formula>CASESAFEID(Case__r.AccountId)  &amp; CASESAFEID(CaseSolution__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Key</label>
    <type>Text</type>
</CustomField>