force-app/main/default/objects/CaseSolutionJunction__c/fields/Black_Spot__c.field-meta.xml
<CustomField>
    <fullName>Black_Spot__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Something Max did - better not ask...
Delete if he has finally left the company</description>
    <inlineHelpText>He is dead, Jim!</inlineHelpText>
    <label>Black Spot</label>
    <type>Checkbox</type>
</CustomField>