force-app/main/default/objects/CaseSolutionJunction__c/fields/Case_CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>Case_CreatedDate__c</fullName>
    <formula>Case__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case CreatedDate</label>
    <type>DateTime</type>
</CustomField>