force-app/main/default/objects/CaseSolutionJunction__c/fields/Case_Solution__c.field-meta.xml
<CustomField>
    <fullName>Case_Solution__c</fullName>
    <formula>CaseSolution__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Solution</label>
    <type>Text</type>
</CustomField>