force-app/main/default/objects/CaseSolutionJunction__c/fields/Case_Solution_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Solution_Name__c</fullName>
    <formula>CaseSolution__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Solution Name</label>
    <type>Text</type>
</CustomField>