force-app/main/default/objects/CaseSolutionJunction__c/fields/CaseSolution__c.field-meta.xml
<CustomField>
    <fullName>CaseSolution__c</fullName>
    <label>Case Solution</label>
    <referenceTo>CaseSolution__c</referenceTo>
    <relationshipLabel>Case Solution Junctions</relationshipLabel>
    <relationshipName>Case_Solution_Junctions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>