force-app/main/default/objects/CaseSolutionJunction__c/fields/CSAT__c.field-meta.xml
<CustomField>
    <fullName>CSAT__c</fullName>
    <formula>Case__r.CSAT__c</formula>
    <label>CSAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>