force-app/main/default/objects/CaseSolutionJunction__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <formula>CASESAFEID(Case__c) &amp; CASESAFEID(CaseSolution__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Key</label>
    <type>Text</type>
</CustomField>