force-app/main/default/objects/CaseSolutionJunction__c/fields/Predicted_CSAT__c.field-meta.xml
<CustomField>
    <fullName>Predicted_CSAT__c</fullName>
    <label>Predicted CSAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>