force-app/main/default/objects/CaseSolutionJunction__c/fields/Product_Key__c.field-meta.xml
<CustomField>
    <fullName>Product_Key__c</fullName>
    <formula>CASESAFEID(Case__c) &amp;  TEXT(CaseSolution__r.ProductService__c)</formula>
    <label>Product Key</label>
    <type>Text</type>
</CustomField>