force-app/main/default/objects/CaseSolutionJunction__c/fields/Product_Service__c.field-meta.xml
<CustomField>
    <fullName>Product_Service__c</fullName>
    <formula>TEXT(CaseSolution__r.ProductService__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product/Service</label>
    <type>Text</type>
</CustomField>