force-app/main/default/objects/CaseSolutionJunction__c/listViews/all_CSJ.listView-meta.xml
<ListView>
    <fullName>all_CSJ</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>all CSJ</label>
</ListView>